--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
