--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
     "debug": "export DEBUG=* && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn ./app.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "@typescript-eslint/parser": "^4.29.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
+    "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   },
