--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "json2csv": "^5.0.6",
     "puppeteer": "^10.2.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
+    "@types/json2csv": "^5.0.3",
     "@types/request": "^2.48.7",
     "@types/request-promise": "^4.1.48",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
