--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "json2csv": "^5.0.6",
@@ -24,6 +26,7 @@
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
+    "@types/async": "^3.2.9",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
