--- a/dev.env
+++ b/dev.env
@@ -2,4 +2,6 @@ NODE_ENV=dev
 
 PORT=3333
 
-MONGODB_URL=mongodb://localhost:27017/zhihu-excel
+# MONGODB_URL=mongodb://localhost:27017/zhihu-excel
+
+MONGODB_URL=mongodb://localhost:27017/puppeteer
