--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.2",
+    "chalk": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "json2csv": "^5.0.6",
+    "mongoose": "^6.1.3",
     "puppeteer": "^10.2.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
